--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -11,7 +11,7 @@ import Icon from 'astro-icon';
     <ProjectCard />
     <ProjectCard
       name="Catan Leaderboard"
-      stack={'python'}
+      stack={['react', 'python']}
       desc="An app to record and keep track of Settler's Catan games played and won with a leaderboard"
       github_url="https://icones.js.org/collection/mdi?s=link"
       live_url="https://fractdev.com"
