--- a/src/components/ProjectCard.astro
+++ b/src/components/ProjectCard.astro
@@ -6,7 +6,14 @@ const x = ['python', 'react'];
 ---
 
 <div
-  class="group relative flex flex-col items-start text-prime-text hover:bg-base-light p-4 rounded-lg">
+  class="group relative flex flex-col items-start text-prime-text hover:bg-base-light p-4 rounded-lg border-[1px]">
+  <div class="absolute top-0 right-0 p-2">
+    <Icon
+      pack="mdi"
+      name="arrow-top-right-thick"
+      class="h-4 w-4 transition-all duration-300 group-hover:translate-x-1 group-hover:-translate-y-1 group-hover:text-prime"
+    />
+  </div>
   <a href={live_url}>
     <div>
       <!-- will resume this when astro issue is fixed -->
@@ -14,17 +21,24 @@ const x = ['python', 'react'];
     </div>
 
     <h2 class="mt-6 text-base font-semibold text-zinc-800 dark:text-zinc-100">
-      <span class="relative z-10 text-prime-text">{name}</span>
+      <span class="relative z-10 text-prime-text group-hover:text-prime"
+        >{name}</span
+      >
     </h2>
-    <p class="relative z-10 mt-2 text-sm text-zinc-600 dark:text-zinc-400">
+    <p
+      class="relative z-10 mt-2 text-sm text-secondary-text group-hover:text-prime-text">
       {desc}
     </p>
     <a
       href={github_url}
-      class="relative z-10 mt-6 flex text-sm font-medium text-zinc-400 transition group-hover:text-teal-500 dark:text-zinc-200">
-      <Icon pack="mdi" name="link-variant" class="text-prime-text h-4 w-4" />
+      class="relative w-full z-10 mt-6 flex text-sm font-medium transition">
+      <Icon
+        pack="mdi"
+        name="link-variant"
+        class="text-prime-text h-4 w-4 group-hover:text-prime"
+      />
 
-      <span class="ml-2">planetaria.tech</span>
+      <span class="ml-2 group-hover:text-prime">GitHub Repo</span>
     </a>
   </a>
 </div>
