--- a/src/components/PostCard.astro
+++ b/src/components/PostCard.astro
@@ -1,39 +1,42 @@
 ---
-import type { Project } from '@/data/projects';
-
-type Props = Project;
-
-const { title, techs, link } = Astro.props;
-
-// const formatTechs = (values: string[]) =>
-//   values.toString().replaceAll(',', ' • ');
+const { post_url } = Astro.props;
 ---
 
 <a
-  class="group flex w-full cursor-pointer flex-col justify-between gap-2 rounded-md border border-prime-text p-4 transition-all duration-300 hover:-translate-y-2 hover:border-prime md:flex-row md:items-center"
-  href={link}
-  target="_blank"
-  rel="noreferrer">
-  <div class="flex flex-col gap-4 md:flex-row md:items-center">
-    <p class="text-prime-text">{title}</p>
-    <!-- <p>{formatTechs(techs)}</p> -->
+  class="group w-full flex cursor-pointer flex-col gap-2 rounded-md border border-secondary-text p-4 transition-all duration-300 hover:-translate-y-2 hover:border-prime"
+  href="/posts/the-power-of-react-hooks"
+>
+  <div
+    class="flex w-full flex-col justify-between gap-2 md:flex-row md:items-center"
+  >
+    <p class="group-hover:text-prime text-neutral-100">
+      The Power Of React Hooks
+    </p>
+    <div class="flex flex-row items-center gap-4">
+      <p>24/05/2023</p>
+
+      <svg
+        width="18"
+        height="18"
+        viewBox="0 0 18 18"
+        fill="none"
+        class="transition-all duration-300 group-hover:translate-x-1"
+      >
+        <path
+          d="M5.25 12.75L12.75 5.25"
+          stroke="#999999"
+          stroke-linecap="round"
+          stroke-linejoin="round"></path>
+        <path
+          d="M5.25 5.25H12.75V12.75"
+          stroke="#999999"
+          stroke-linecap="round"
+          stroke-linejoin="round"></path>
+      </svg>
+    </div>
   </div>
 
-  <svg
-    width="18"
-    height="18"
-    viewBox="0 0 18 18"
-    fill="none"
-    class="transition-all duration-300 group-hover:translate-x-1 group-hover:text-prime">
-    <path
-      d="M5.25 12.75L12.75 5.25"
-      stroke="#999999"
-      stroke-linecap="round"
-      stroke-linejoin="round"></path>
-    <path
-      d="M5.25 5.25H12.75V12.75"
-      stroke="#999999"
-      stroke-linecap="round"
-      stroke-linejoin="round"></path>
-  </svg>
+  <p class="truncate">
+    Lorem ipsum dolor sit amet consectetur et ultrices blandit neque ege
+  </p>
 </a>
