--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,22 +1,14 @@
 ---
-import ProjectCard from '../components/ProjectCard.astro';
+import ProjectSection from '../components/sections/ProjectSection.astro';
 import { SITE_TITLE, SITE_DESCRIPTION } from '../consts';
 import BaseLayout from '../layouts/BaseLayout.astro';
-import PostCard from '../components/PostCard.astro';
+import PostSection from '../components/sections/PostSection.astro';
 import Icon from 'astro-icon';
+import Hero from '../components/Hero.astro';
 ---
 
 <BaseLayout>
-  <h1>Test</h1>
-  <ul class="grid grid-cols-1 gap-x-12 gap-y-16 sm:grid-cols-2 lg:grid-cols-3">
-    <ProjectCard />
-    <ProjectCard
-      name="Catan Leaderboard"
-      stack={['react', 'python']}
-      desc="An app to record and keep track of Settler's Catan games played and won with a leaderboard"
-      github_url="https://icones.js.org/collection/mdi?s=link"
-      live_url="https://fractdev.com"
-    />
-  </ul>
-  <PostCard />
+  <Hero />
+  <ProjectSection />
+  <PostSection />
 </BaseLayout>
