--- a/src/components/ProjectCard.astro
+++ b/src/components/ProjectCard.astro
@@ -5,7 +5,8 @@ const { github_url, live_url, desc, name, stack } = Astro.props;
 ---
 
 <div
-  class="group relative flex flex-col items-start text-prime-text hover:bg-base-light p-4 rounded-lg border-[1px]">
+  class="group relative flex flex-col items-start text-prime-text hover:bg-base-accent p-4 rounded-lg border-[1px]"
+>
   <div class="absolute top-0 right-0 p-2">
     <Icon
       pack="mdi"
@@ -19,18 +20,22 @@ const { github_url, live_url, desc, name, stack } = Astro.props;
       <!-- {stack.map((items) => <Icon pack="logos" name={items} class="h-6 w-6" />)} -->
     </div>
 
-    <h2 class="mt-6 text-base font-semibold text-zinc-800 dark:text-zinc-100">
+    <h2
+      class="mt-2 pb-6 text-base font-semibold text-zinc-800 dark:text-zinc-100"
+    >
       <span class="relative z-10 text-prime-text group-hover:text-prime"
         >{name}</span
       >
     </h2>
     <p
-      class="relative z-10 mt-2 text-sm text-secondary-text group-hover:text-prime-text">
+      class="relative z-10 mt-2 text-sm text-secondary-text group-hover:text-prime-text"
+    >
       {desc}
     </p>
     <a
       href={github_url}
-      class="relative w-full z-10 mt-6 flex text-sm font-medium transition">
+      class="relative w-full z-10 mt-6 flex text-sm font-medium transition hover:underline hover:underline-offset-2 hover:text-prime"
+    >
       <Icon
         pack="mdi"
         name="link-variant"
