--- a/src/components/sections/PostSection.astro
+++ b/src/components/sections/PostSection.astro
@@ -2,7 +2,7 @@
 import PostCard from '../PostCard.astro';
 ---
 
-<section class="my-10">
+<section id="#posts" class="my-10">
   <div class="py-6">
     <div class="flex justify-between items-center mb-3">
       <h2 class="text-prime-text text-3xl underline underline-offset-8">
