--- a/src/components/SideBar.astro
+++ b/src/components/SideBar.astro
@@ -22,7 +22,7 @@ import SocialIcons from './SocialIcons.astro';
       <div role="list" class="flex flex-1 flex-col gap-y-7">
         <ul role="list" class="-mx-2 space-y-1">
           <NavItem to="#projects" navName="Projects" icon="code" />
-          <NavItem to="#posts" navName="Posts" icon="document-text" />
+          <NavItem to="/blog" navName="Posts" icon="document-text" />
           <NavItem to="#" navName="Work With Me" icon="user-group" />
           <NavItem to="#" navName="Resume" icon="cloud-download" />
           <NavItem
