--- a/src/components/sections/PostSection.astro
+++ b/src/components/sections/PostSection.astro
@@ -1,5 +1,11 @@
 ---
 import PostCard from '../PostCard.astro';
+
+
+import { getCollection } from 'astro:content';
+
+const allPosts = await getCollection('blog');
+
 ---
 
 <section id="#posts" class="my-10">
@@ -20,8 +26,9 @@ import PostCard from '../PostCard.astro';
     </p>
   </div>
   <ul class="flex flex-col space-y-4">
-    <PostCard />
-    <PostCard />
-    <PostCard post_url="#" />
+    {allPosts.map((posts) => 
+    <div class='py-4'>
+        <PostCard post={posts} />
+    </div>)}
   </ul>
 </section>
