--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -1,4 +1,6 @@
 ---
+import Icon from "astro-icon";
+
 
 ---
 
@@ -6,12 +8,17 @@
   <h1
     class="text-4xl font-bold tracking-tight text-zinc-800 dark:text-zinc-100 sm:text-5xl"
   >
-    Software engineer, self-optimizer, and motorcycle fanatic.
+    Fullstack Software engineer, self-optimizer, and motorcycle fanatic.
   </h1>
   <p class="mt-6 text-secondary-text text-zinc-600 dark:text-zinc-400">
     Hey there, I'm Jay, a software engineer and entrepreneur based in the
-    Greater Boston Area. I’m the founder and CEO of Planetaria, where we develop
-    technologies that empower regular people to explore space on their own
-    terms.
+    Greater Boston Area. I’m a fullstack software engineer working mainly in Python, Javascript and Laravel.
   </p>
+  <div class="flex mt-8 space-x-3">
+    <Icon pack="logos" name="react" class="w-6 h-6"/>
+    <Icon pack="logos" name="javascript" class="w-6 h-6"/>
+    <Icon pack="logos" name="python" class="w-6 h-6"/>
+    <Icon pack="logos" name="laravel" class="w-6 h-6"/>
+    <Icon pack="logos" name="aws" class="w-6 h-6"/>
+  </div>
 </div>
