--- a/src/components/SocialIcons.astro
+++ b/src/components/SocialIcons.astro
@@ -2,7 +2,7 @@
 import { Icon } from 'astro-icon';
 ---
 
-<div class="px-4 my-2 flex self-center">
+<div class="flex self-center px-4 my-2 mb-8">
   <a
     href="https://github.com/j-delisle"
     target="_blank"
@@ -13,7 +13,7 @@ import { Icon } from 'astro-icon';
     <Icon
       pack="mdi"
       name="github"
-      class="h-6 w-6 text-prime-text hover:text-prime"
+      class="w-6 h-6 text-prime-text hover:text-prime"
     />
   </a>
   <a
@@ -26,7 +26,7 @@ import { Icon } from 'astro-icon';
     <Icon
       pack="mdi"
       name="twitter"
-      class="h-6 w-6 text-prime-text hover:text-prime"
+      class="w-6 h-6 text-prime-text hover:text-prime"
     />
   </a>
   <a
@@ -39,7 +39,7 @@ import { Icon } from 'astro-icon';
     <Icon
       pack="mdi"
       name="linkedin"
-      class="h-6 w-6 text-prime-text hover:text-prime"
+      class="w-6 h-6 text-prime-text hover:text-prime"
     />
   </a>
 
@@ -53,7 +53,7 @@ import { Icon } from 'astro-icon';
     <Icon
       pack="mdi"
       name="rss"
-      class="h-6 w-6 text-prime-text hover:text-prime"
+      class="w-6 h-6 text-prime-text hover:text-prime"
     />
   </a>
 </div>
