comment out blog and other pages

--- a/src/components/MobileNav.astro
+++ b/src/components/MobileNav.astro
@@ -1,6 +1,6 @@
-<nav class="fixed md:hidden pointer-events-auto block bg-base z-10">
+<nav class="fixed z-10 block pointer-events-auto md:hidden bg-base">
   <ul
-    class="flex rounded-full bg-white/90 px-3 text-sm font-medium text-secondary-text shadow-lg shadow-base-accent ring-1 ring-base-light backdrop-blur"
+    class="flex px-3 text-sm font-medium rounded-full shadow-lg bg-white/90 text-secondary-text shadow-base-accent ring-1 ring-base-light backdrop-blur"
   >
     <li>
       <a
@@ -8,10 +8,10 @@
         href="#projects">Projects</a
       >
     </li><li>
-      <a
+      <!-- <a
         class="relative block px-3 py-2 transition hover:text-prime"
         href="#posts">Posts</a
-      >
+      > -->
     </li><li>
       <a class="relative block px-3 py-2 transition hover:text-prime" href="#"
         >Work With Me</a
