--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -10,5 +10,5 @@ import Hero from '../components/Hero.astro';
 <BaseLayout>
   <Hero />
   <ProjectSection />
-  <PostSection />
+  <!-- <PostSection /> -->
 </BaseLayout>
