Add review component and update site to have reviews

--- a/src/components/SideBar.astro
+++ b/src/components/SideBar.astro
@@ -21,13 +21,14 @@ import SocialIcons from './SocialIcons.astro';
     <nav class="flex flex-col flex-1">
       <div role="list" class="flex flex-col flex-1 gap-y-7">
         <ul role="list" class="-mx-2 space-y-1">
-          <NavItem to="#projects" navName="Projects" icon="code" />
+          <NavItem to="#clients" navName="Client Projects" icon="code" />
+          <NavItem to="#projects" navName="Personal Projects" icon="chart-bar" />
           <!-- <NavItem to="/blog" navName="Posts" icon="document-text" /> -->
-          <NavItem to="#" navName="Work With Me" icon="user-group" />
+          <!-- <NavItem to="#" navName="Work With Me" icon="user-group" /> -->
           <!-- <NavItem to="#" navName="Resume" icon="cloud-download" /> -->
           <NavItem
             to="mailto:jay@jaydelisle.dev"
-            navName="Contact"
+            navName="Work With Me"
             icon="mail"
           />
         </ul>
