--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -9,18 +9,18 @@ import SocialIcons from '../components/SocialIcons.astro';
 <!doctype html>
 <html lang="en" class="bg-base text-prime-text">
   <head>
-    <BaseHead title={'Jay Delisle Dev'} description={''} />
+    <BaseHead title={'Jay Delisle | Fullstack Dev'} description={''} />
   </head>
   <body>
-    <div class="container mx-auto min-h-screen">
+    <div class="container min-h-screen mx-auto">
       <div class="flex flex-row flex-wrap py-4">
         <SideBar />
-        <main role="main" class="w-full sm:w-2/3 md:w-3/4 pt-1 px-2">
+        <main role="main" class="w-full px-2 pt-1 sm:w-2/3 md:w-3/4">
           <MobileNav />
           <div class="mt-24 md:mt-0 sm:px-8 my-9">
-            <div class="mx-auto w-full max-w-7xl lg:px-8">
+            <div class="w-full mx-auto max-w-7xl lg:px-8">
               <div class="relative px-4 sm:px-8 lg:px-12">
-                <div class="mx-auto max-w-2xl lg:max-w-5xl">
+                <div class="max-w-2xl mx-auto lg:max-w-5xl">
                   <slot />
                 </div>
               </div>
@@ -28,7 +28,7 @@ import SocialIcons from '../components/SocialIcons.astro';
           </div>
           <Footer />
           <div
-            class="fixed w-full bottom-0 bg-base md:hidden pt-4 flex justify-center z-10"
+            class="fixed bottom-0 z-10 flex justify-center w-full pt-4 bg-base md:hidden"
           >
             <SocialIcons />
           </div>
