--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -1,6 +1,4 @@
 ---
-import Icon from "astro-icon";
-
 
 ---
 
@@ -14,11 +12,9 @@ import Icon from "astro-icon";
     Hey there, I'm Jay, a software engineer and entrepreneur based in the
     Greater Boston Area. I’m a fullstack software engineer working mainly in Python, Javascript and Laravel.
   </p>
-  <div class="flex mt-8 space-x-3">
-    <Icon pack="logos" name="react" class="w-6 h-6"/>
-    <Icon pack="logos" name="javascript" class="w-6 h-6"/>
-    <Icon pack="logos" name="python" class="w-6 h-6"/>
-    <Icon pack="logos" name="laravel" class="w-6 h-6"/>
-    <Icon pack="logos" name="aws" class="w-6 h-6"/>
+  <div class="my-12">
+    <p class="mb-6 text-secondary-text text-zinc-600 dark:text-zinc-400">Tech stacks that I've used and have experience working with:</p>
+    <img src="https://skillicons.dev/icons?i=python,javascript,php,fastapi,react,laravel,django,tailwindcss,postgres,supabase,aws,docker,webflow" />
   </div>
+  <img src="https://ghchart.rshah.org/j-delisle" alt="GitHub Contribution Chart" />
 </div>
