--- a/src/components/BaseHead.astro
+++ b/src/components/BaseHead.astro
@@ -16,6 +16,9 @@ const { title, description, image = '/blog-placeholder-1.jpg' } = Astro.props;
 <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 <meta name="generator" content={Astro.generator} />
 
+<!-- analytics -->
+<script defer data-domain="jaydelisle.dev" src="https://plausible.io/js/script.js"></script>
+
 <!-- Font preloads -->
 <link
   rel="preload"
