--- a/src/components/MobileNav.astro
+++ b/src/components/MobileNav.astro
@@ -5,25 +5,35 @@
     <li>
       <a
         class="relative block px-3 py-2 transition hover:text-prime"
-        href="#projects">Projects</a
+        href="#clients">Client Projects</a
       >
-    </li><li>
-      <!-- <a
+    </li>
+    <li>
+      <a
+        class="relative block px-3 py-2 transition hover:text-prime"
+        href="#projects">Personal Projects</a
+      >
+    </li>
+    <!-- <li>
+      <a
         class="relative block px-3 py-2 transition hover:text-prime"
         href="#posts">Posts</a
-      > -->
-    </li><li>
+      >
+    </li>
+    <li>
       <a class="relative block px-3 py-2 transition hover:text-prime" href="#"
         >Work With Me</a
       >
-    </li><li>
+    </li>
+    <li>
       <a class="relative block px-3 py-2 transition hover:text-prime" href="#"
         >Resume</a
       >
-    </li><li>
+    </li> -->
+    <li>
       <a
         class="relative block px-3 py-2 transition hover:text-prime"
-        href="mailto:jay@jaydelisle.dev">Contact</a
+        href="mailto:jay@jaydelisle.dev">Hire Me</a
       >
     </li>
   </ul>
