--- a/src/components/SocialIcons.astro
+++ b/src/components/SocialIcons.astro
@@ -9,6 +9,7 @@ import { Icon } from 'astro-icon';
     class="mx-3"
     aria-label="Github"
     title="Github"
+    target="_blank" rel="noopener noreferrer"
   >
     <Icon
       pack="mdi"
@@ -22,6 +23,7 @@ import { Icon } from 'astro-icon';
     class="mx-3"
     aria-label="Twitter"
     title="Twitter"
+    target="_blank" rel="noopener noreferrer"
   >
     <Icon
       pack="mdi"
@@ -35,6 +37,7 @@ import { Icon } from 'astro-icon';
     class="mx-3"
     aria-label="Linkedin"
     title="Linkedin"
+    target="_blank" rel="noopener noreferrer"
   >
     <Icon
       pack="mdi"
