--- a/src/components/ProjectCard.astro
+++ b/src/components/ProjectCard.astro
@@ -13,7 +13,7 @@ const { github_url, live_url, desc, name, stack, skill_src } = Astro.props;
       class="w-4 h-4 transition-all duration-300 group-hover:translate-x-1 group-hover:-translate-y-1 group-hover:text-prime"
     />
   </div>
-  <a href={live_url}>
+  <a href={live_url} target="_blank" rel="noopener noreferrer">
     <h2
       class="pb-6 mt-2 text-base font-semibold text-zinc-800 dark:text-zinc-100"
     >
