--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -2,7 +2,7 @@
 
 ---
 
-<div class="max-w-4xl">
+<div class="max-w-4xl mt-16">
   <h1
     class="text-4xl font-bold tracking-tight text-zinc-800 dark:text-zinc-100 sm:text-5xl"
   >
