update header title

--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -6,7 +6,7 @@
   <h1
     class="text-4xl font-bold tracking-tight text-zinc-800 dark:text-zinc-100 sm:text-5xl"
   >
-    Fullstack Software engineer, self-optimizer, and motorcycle fanatic.
+    Fullstack Software engineer helping startups ship fast and move forward reliably.
   </h1>
   <p class="mt-6 text-secondary-text text-zinc-600 dark:text-zinc-400">
     Hey there, I'm Jay, a software engineer and entrepreneur based in the
