--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -15,10 +15,10 @@ import ProjectCard from '../components/ProjectCard.astro';
 
   <!-- Testimonial Section -->
   <Review
-    review_text={`"Jay helped us achieve everything we wanted to do on Webflow. I'd recommend him without any hesitation."`}
-    name="Tom Jacquesson"
-    company="Co-Founder @ Tweet Hunter"
-    image_src="/images/tom_j_th.webp"
+    review_text={`"Availability, quick response time, and technical strategy input - providing valuable input and suggestion on best practices versus just doing it."`}
+    name="Neal Cung"
+    company="Founder @ NLN Capital"
+    image_src="/images/neal_cung_pfp.jpeg"
   />
 
   <!-- Client Work Projects -->
@@ -40,6 +40,7 @@ import ProjectCard from '../components/ProjectCard.astro';
         name="UrbanDirect"
         client_desc="Fast growing NYC startup working to disrupt the overnight shipping industry"
         project_desc="After failing to hit deadlines, I came on to UrbanDirect to lead application developlment. I got a full React frontend application out the door and proudction ready in two weeks to get the startup back on track for their launch date and oversaw the backend developer"
+        project_review="Great experience. This project was very fluid and Delisle Domain was instrumental to help keep the team focused, applying best practices in providing the best UI/UX experience for the end customer."
         stack_src="https://skillicons.dev/icons?i=react,javascript,aws,webflow,vite,c#&perline=6"
       />
       <ClientCard
@@ -49,6 +50,7 @@ import ProjectCard from '../components/ProjectCard.astro';
         name="TweetHunter"
         client_desc="Fast growing Twitter/X content tool that has been sold for over 8 figures"
         project_desc="I was brought on to improve Tweet Hunter's leading page performance. Was able to increase LP performance by over 40%. In addition I built out their content system in Webflow for their SEO strategist."
+        project_review="Jay helped us achieve everything we wanted to do on Webflow. I'd recommend him without any hesitation."
         stack_src="https://skillicons.dev/icons?i=javascript,webflow&perline=6"
       />
     </ul>
