--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -3,5 +3,5 @@ const today = new Date();
 ---
 
 <footer class="pb-6 px-6 text-[0.75rem] text-secondary-text pt-6">
-  &copy; {today.getFullYear()} Jay Delisle. All rights reserved.
+  &copy; {today.getFullYear()} Jay Delisle - Delisle Domain LLC. All rights reserved.
 </footer>
