--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -49,7 +49,7 @@ import ProjectCard from '../components/ProjectCard.astro';
         live_url="https://tweethunter.io/"
         name="TweetHunter"
         client_desc="Fast growing Twitter/X content tool that has been sold for over 8 figures"
-        project_desc="I was brought on to improve Tweet Hunter's leading page performance. Was able to increase LP performance by over 40%. In addition I built out their content system in Webflow for their SEO strategist."
+        project_desc="I was brought on to improve Tweet Hunter's leading page performance. Increased their landing page performance by over 40%. In addition, I built out their content system in Webflow for their SEO strategist and team."
         project_review="Jay helped us achieve everything we wanted to do on Webflow. I'd recommend him without any hesitation."
         stack_src="https://skillicons.dev/icons?i=javascript,webflow&perline=6"
       />
