add humblytics analytics

--- a/src/components/BaseHead.astro
+++ b/src/components/BaseHead.astro
@@ -18,6 +18,7 @@ const { title, description, image = '/images/og.png' } = Astro.props;
 
 <!-- analytics -->
 <script defer data-domain="jaydelisle.dev" src="https://plausible.io/js/script.js"></script>
+<script async src="https://app.humblytics.com/hmbl.min.js?id=a13d62d"></script>
 
 <!-- Font preloads -->
 <link
