update Hero wording and description and tech

--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -6,15 +6,32 @@
   <h1
     class="text-4xl font-bold tracking-tight text-zinc-800 dark:text-zinc-100 sm:text-5xl"
   >
-    Fullstack Software engineer helping startups ship fast and move forward reliably.
+    Experienced Fullstack Software Engineer building reliable, high-impact
+    products for fast-moving teams.
   </h1>
   <p class="mt-6 text-secondary-text text-zinc-600 dark:text-zinc-400">
-    Hey there, I'm Jay, a software engineer and entrepreneur based in the
-    Greater Boston Area. I’m a fullstack software engineer working mainly in Python, Javascript and Laravel.
+    Hi, I’m Jay — a fullstack software engineer passionate about learning,
+    building, and solving problems.
+    <br />
+    <br />
+    Based in the Greater Boston Area, My main tools of choice include Python, JavaScript/Typescript,
+    React, and Laravel. I thrive in fast-moving environments where I can learn quickly,
+    adapt to new challenges, and deliver reliable, impactful software — whether that
+    means building scalable backend systems or crafting intuitive user experiences.
+    My work is driven by a love for continuous growth, elegant solutions, and writing
+    efficient, performant code that creates meaningful user experiences.
   </p>
-  <div class="my-12">
-    <p class="mb-6 text-secondary-text text-zinc-600 dark:text-zinc-400">Tech stacks that I've used and have experience working with:</p>
-    <img src="https://skillicons.dev/icons?i=python,javascript,php,fastapi,react,laravel,django,tailwindcss,postgres,supabase,aws,docker,webflow" />
-  </div>
-  <img src="https://ghchart.rshah.org/j-delisle" alt="GitHub Contribution Chart" />
 </div>
+
+<div class="my-12">
+  <p class="mb-6 text-secondary-text text-zinc-600 dark:text-zinc-400">
+    Tech stacks that I've used and have experience working with:
+  </p>
+  <img
+    src="https://skillicons.dev/icons?i=python,javascript,typescript,react,php,laravel,fastapi,django,tailwindcss,postgres,supabase,aws,docker,webflow"
+  />
+</div>
+<img
+  src="https://ghchart.rshah.org/j-delisle"
+  alt="GitHub Contribution Chart"
+/>
